--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ img{border:1px solid var(--line) !important;border-radius:6px}
 
     // ===== LIFF初期化 =====
     document.addEventListener('DOMContentLoaded', function () {
-      liff.init({ liffId: '2008453222-VyWPnMex' })
+      liff.init({ liffId: '2005254357-zKma9BZk' })
         .then(() => console.log('LIFF初期化成功'))
         .catch(err => console.log('LIFF初期化失敗', err));
 
