--- a/index.html
+++ b/index.html
@@ -1550,10 +1550,7 @@ function submitForm() {
         {
             type: 'text',
             text:
-`【料金のご案内】
-メニュー料金：¥${menuAmount.toLocaleString()}
-オプション料金：¥${optionAmount.toLocaleString()}
-合計金額：¥${totalAmount.toLocaleString()}`
+`【予約確認】`
         }
     ]).then(() => {
         alert('当日キャンセルは無いようにお願いいたします。');
