--- a/index.html
+++ b/index.html
@@ -1550,7 +1550,7 @@ function submitForm() {
         {
             type: 'text',
             text:
-`【予約確認】`
+`予約確認`
         }
     ]).then(() => {
         alert('当日キャンセルは無いようにお願いいたします。');
