--- a/index.html
+++ b/index.html
@@ -1545,12 +1545,7 @@ function submitForm() {
     liff.sendMessages([
         {
             type: 'text',
-            text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.numberCount}\nオフの有無：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom},${formData.irradiationsCount}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
-        },
-        {
-            type: 'text',
-            text:
-`予約確認`
+            text: `【ご予約内容】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.numberCount}\nオフの有無：${formData.visitCount}\nコース：${formData.selectedMenu}\nメニュー：${formData.selectedSymptom}\nメニュー料金：¥${menuAmount.toLocaleString()}\n希望日時：\n ${formData.dates[0]}\nメッセージ：${formData.message}`
         }
     ]).then(() => {
         alert('当日キャンセルは無いようにお願いいたします。');
