--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
     max-width: 480px;          /* 横幅を少し制限して中央に */
     margin: 20px auto 15px;    /* 上下に余白＋中央寄せ */
     padding: 14px 18px;
-    font-size: 1.1rem;         /* 文字を少し大きく */
+    font-size: 0.95rem;         /* 文字を少し大きく */
     font-weight: 700;
     background: linear-gradient(135deg, #877059, #877059); /* 目立つグラデーション */
     color: #ffffff;
@@ -548,7 +548,7 @@
 }
 
 .labelsansyuu::before {
-    content: "★";
+    content: "";
     position: absolute;
     left: 16px;
     top: 50%;
