--- a/index.html
+++ b/index.html
@@ -147,15 +147,6 @@
   align-items: flex-start;
 }
 
-/* ★ここを書き換え（上書き） */
-@media (max-width: 900px) {
-  .menu-layout {
-    display: flex;
-    flex-direction: column; /* 上から順に縦並び */
-    gap: 20px;
-  }
-}
-
     /* カテゴリタブ */
     .category-tabs {
       display: flex;
@@ -335,14 +326,6 @@
   top: 24px;
 }
 
-/* ★ここをこう変更 */
-@media (max-width: 900px) {
-  .detail-panel {
-    position: static; /* sticky はオフ */
-    order: -1;        /* flex 内で一番上に移動 */
-  }
-}
-
     .detail-heading {
       font-size: 13px;
       letter-spacing: 0.16em;
@@ -473,32 +456,33 @@
       }
     }
 
-/* ▼ スマホ幅（〜900px）のときのレイアウト調整 ▼ */
+/* ▼ スマホ幅（〜900px）のとき：MENU DETAIL を画面下に追従させる ▼ */
 @media (max-width: 900px) {
-  /* 下に固定した DETAIL パネルのぶんだけ余白を足す */
+  /* DETAIL パネルがかぶらないように、下に余白を足す */
   body {
-    padding-bottom: 200px;
+    padding-bottom: 220px; /* パネルの高さに合わせて調整してOK */
   }
 
-  /* メニューは縦並び（デフォルト）でOK */
+  /* レイアウトは 1 カラムに */
   .menu-layout {
     display: block;
   }
 
-  /* MENU DETAIL を画面下に固定するボトムシート風 */
+  /* MENU DETAIL を画面下に固定（スクロールしてもついてくる） */
   .detail-panel {
     position: fixed;
     left: 16px;
     right: 16px;
-    bottom: 16px;
+    bottom: 16px;   /* ぴったり下にくっつけたいなら 0 にしてもOK */
     top: auto;
-    max-height: 55vh;           /* 中身だけスクロールできるように */
+    max-height: 55vh;      /* 中身が長いときはパネル内だけスクロール */
     overflow-y: auto;
     border-radius: 20px;
     box-shadow: 0 18px 40px rgba(32, 17, 58, 0.35);
     z-index: 999;
   }
 }
+
   </style>
 </head>
 <body>
@@ -1247,8 +1231,6 @@
       <aside class="detail-panel">
         <h3 class="detail-heading">MENU DETAIL</h3>
         <p class="detail-sub">
-          左のメニュー名をタップすると、こちらに<br />
-          「詳細」と「料金」が表示されます。
         </p>
         <div id="treatment-detail">
           <p class="treatment-placeholder">
@@ -2269,22 +2251,16 @@
       );
     }
 
-    const detail = document.getElementById("treatment-detail");
-    if (!detail) return;
+      const detail = document.getElementById("treatment-detail");
+      if (!detail) return;
 
-    // html がセットされているパターン（treatment1〜7 など）はここで描画
-    if (html) {
-      detail.innerHTML = html;
-    } else if (!detail.innerHTML.trim()) {
-      // 念のため、何も描画されていないときだけプレースホルダーを出す
-      detail.innerHTML =
-        '<p class="treatment-placeholder">このメニューの詳細がまだ設定されていません。</p>';
-    }
+detail.innerHTML = html;
 
-// 詳細エリアへスクロール（PCのみ）
+// 詳細エリアへのスクロールは PC のときだけ
 if (window.innerWidth > 900) {
   detail.scrollIntoView({ behavior: "smooth", block: "nearest" });
 }
-</script>
+    }
+  </script>
 </body>
 </html>
