--- a/index.html
+++ b/index.html
@@ -456,12 +456,7 @@
       }
     }
 
-/* ▼ MENU レイアウト（モバイル基準） */
-.menu-layout {
-  display: block; /* スマホは1カラムで縦並び */
-}
-
-/* ▼ MENU DETAIL の共通デザイン（見た目だけ） */
+/* 共通の見た目 */
 .detail-panel {
   background: #f9f7ff;
   border-radius: 20px;
@@ -469,28 +464,7 @@
   border: 1px solid rgba(60, 45, 92, 0.18);
 }
 
-/* ▼ スマホ（〜900px）のとき：画面下に固定＆スクロール追従 */
-@media (max-width: 900px) {
-  /* 下に固定される DETAIL パネルと被らないよう、ページの下に余白を足す */
-  body {
-    padding-bottom: 220px; /* パネルの高さに合わせて調整OK */
-  }
-
-  .detail-panel {
-    position: fixed;   /* 画面に対して固定 */
-    left: 16px;
-    right: 16px;
-    bottom: 16px;      /* ぴったり下なら 0 でもOK */
-    top: auto;
-    max-height: 55vh;  /* 中身が長いときはパネル内だけスクロール */
-    overflow-y: auto;
-    border-radius: 20px;
-    box-shadow: 0 18px 40px rgba(32, 17, 58, 0.35);
-    z-index: 999;
-  }
-}
-
-/* ▼ PC（901px〜）：2カラム＋右カラム sticky */
+/* PC（901px〜）：右側で上に sticky */
 @media (min-width: 901px) {
   .menu-layout {
     display: grid;
@@ -502,6 +476,18 @@
   .detail-panel {
     position: sticky;
     top: 24px;
+  }
+}
+
+/* スマホ（〜900px）：下寄せで追従したい場合（例） */
+@media (max-width: 900px) {
+  .menu-layout {
+    display: block;
+  }
+
+  .detail-panel {
+    position: sticky;
+    bottom: 0; /* ビューポート下辺付近でくっつく */
   }
 }
 
