--- a/index.html
+++ b/index.html
@@ -514,11 +514,16 @@
           気になるメニュー名をタップすると、右側に〈詳細〉と〈料金〉が表示されます。
         </p>
       </div>
-      <p class="header-note">
-        ご予約は<br />
-        <strong>LINE 予約フォーム</strong> より承っております。<br />
-        こちらのページはメニュー内容のご案内専用です。
-      </p>
+<p class="header-note">
+  ご予約は<br />
+  <strong>
+    <a href="https://liff.line.me/2006377601-BWadbvyJ" target="_blank" rel="noopener noreferrer">
+      LINE 予約フォーム
+    </a>
+  </strong> より承っております。<br />
+  こちらのページはメニュー内容のご案内専用です。
+</p>
+
     </header>
 
     <main class="menu-layout">
